# credit-ai-ops-platform-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.en.md  README.es.md  README.md  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json
.github/: branch-protection-policy.json  branch-protection.md
.github/workflows/: build-sign.yml  ci.yml
docs/adr/: 0001-service-boundaries.md  0002-event-schema-versioning.md  0003-retry-idempotency-strategy.md  0004-model-promotion-strategy.md  0005-azure-deployment-decisions.md  README.md
docs/architecture/: nfrs.md  privacy.md  reproducibility.md  slo.md
docs/executive/: brief.en.md  brief.md  role-alignment.en.md  role-alignment.md
docs/runbooks/: async-flow.md  audit-reporting.md  cybersecurity.md  gateway-auth.md  mlops-lifecycle.md  observability.md  recruiter-demo.md  service-conformance.md  supply-chain.md
infra/container-apps/: README.md  keycloak.md
schemas/asyncapi/: credit-events-v1.yaml
schemas/jsonschema/: error-envelope-v1.json  event-envelope-v1.json
schemas/openapi/: api-gateway-v1.yaml  application-v1.yaml  collab-assistant-v1.yaml  decision-v1.yaml  feature-v1.yaml  mlops-v1.yaml  observability-audit-v1.yaml  scoring-v1.yaml
scripts/: __init__.py
scripts/ci/: __init__.py  adr_gate.py  container_hardening_gate.py  contract_lint.py  coverage_gate.py  cybersec_gate.py  docs_audience_lint.py  generate_reviewer_scorecard.py  render_image_tfvars.py
scripts/dev/: apply_migrations.py  bootstrap.sh  generate_mlops_evidence.py  recruiter_demo.sh  replay_dlq.py  run_outbox_relay.py  run_service.sh
scripts/docker/: healthcheck.py  run_service.py
scripts/runtime/: run_outbox_relay.py
services/api-gateway/: Dockerfile
services/application/: Dockerfile
services/collab-assistant/: Dockerfile
services/decision/: Dockerfile
services/feature/: Dockerfile
services/identity/: README.md
services/mlops/: Dockerfile
services/observability-audit/: Dockerfile
services/scoring/: Dockerfile
tests/: conftest.py  defaults.py
tests/contract/: test_contract_lint.py  test_gateway_auth_contract.py
tests/e2e/: test_gateway_http_stack.py
tests/integration/: test_async_credit_chain.py
tests/perf/: test_slo_baselines.py
tests/smoke/: test_gateway_local_smoke.py
tests/support/: __init__.py  async_chain.py  mlops.py
tests/unit/: test_app_factory.py  test_artifact_store.py  test_assistant_summary.py  test_async_handler_recovery.py  test_collab_assistant_repository.py  test_collab_assistant_routes.py  test_contract_lint.py  test_credit_policy.py  test_cybersec_gate.py  test_database_client.py  test_dependencies.py  test_error_contract.py  (+26 more)
(+86 files in other folders)
